pxc/tests/test_19_thread/thr5.px

namespace ttest;
import thread "";
import io;

multithreaded struct my_thread_obj {
  int x;
  int y;
  io::ioref io;
  function void main() {
    io.stdout_println("my thread main");
    io.stdout_println(x);
    io.stdout_println(y);
  }
}

function void test1()
{
  io::ioref i = tref(io::io()); // error: io is not default-constructible
  thread_t thr = create_thread(my_thread_obj(123, 456, io::main));
  thr.join();
}

test1();

